--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,9 @@ spring.datasource.password=root@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 logging.level.org.springframework.web=TRACE
+
 server.port=8181
 
-spring.security.user.name=admin
-spring.security.user.password=admin
-spring.security.user.roles=ADMIN 
+#spring.security.user.name=admin
+#spring.security.user.password=admin
+#spring.security.user.roles=ADMIN
